test/spec_vectors/i64/fail/module_5.wat
(module (func (result i64) (i64.mul (i32.const 0) (f32.const 0))))